[project]
name = "blues-underground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "icalendar>=6.3.0",
    "requests>=2.32.3",
    "recurring-ical-events>=3.8.0",
]
